[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/fonts/GravityBold8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interface/Hud/PanelPlayerData/DataPanelPlayer.gd" type="Script" id=2]
[ext_resource path="res://interface/main/LabelResource.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="DataPanelPlayer" type="Control"]
pause_mode = 1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_bottom = -24.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelHitpoints" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = 4.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitpoints" type="Label" parent="PanelHitpoints"]
margin_right = 320.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "Hit Points"
valign = 1
uppercase = true

[node name="HitpointsData" type="Label" parent="PanelHitpoints"]
margin_top = 12.0
margin_right = 320.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "xxx/xxx"
valign = 1
uppercase = true
script = ExtResource( 3 )

[node name="PanelWeapon" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -3.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponName" type="Label" parent="PanelWeapon"]
margin_right = 320.0
margin_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Weapon name"
align = 2
valign = 1
uppercase = true

[node name="AmmoData" type="Label" parent="PanelWeapon"]
margin_top = 12.0
margin_right = 320.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "999/999"
align = 2
valign = 1
uppercase = true
script = ExtResource( 3 )
